# solenoid-aio

./: pyproject.toml
tests/: test_solenoid_aio.py
