[tool.poetry]
name = "solenoid-aio"
version = "0.1.0"
description = "Asyncio Implementation of Spring Boot Actuator and Spring Cloud Discovery, Security and Tracing"
authors = ["Grant McDonald <grantmmcdonald@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/calmseas/solenoid-aio"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
